# Poco-HTTP-Client-Wrapper

./: .gitignore  CMakeLists copy 2.txt  CMakeLists copy 3.txt  CMakeLists copy.txt  CMakeLists.txt  README.md  main.cpp
headers/: CustomDef.h  CustomHttpClient.h
include/: CustomHttpSessionFactory.h  CustomLogger.h  HTTPRequestWrapper.h  HTTPSession.h  HttpRequestPool.h  PocoCurlApp.h
include/Utils/: Logger.h  Thread.h  URLParser.h
lib/: CustomHttpClient.cpp
old/: CustomHttpClient.cpp
source/: CustomHttpSessionFactory.cpp  HTTPRequestPool.cpp  HTTPRequestPoolRunnable.cpp  HTTPRequestWrapper.cpp  HTTPSession.cpp  PocoCurlApp.cpp
source/Utils/: Logger.cpp  Thread.cpp  URLParser.cpp
src/: CMakeLists.txt
src/include/: CustomHttpSessionFactory.h  HTTPRequestWrapper.h  HttpRequestPool.h  HttpRequestPoolRunnable.h  PocoCurlApp.h
src/include/Utils/: Logger.h  Thread.h  URLParser.h
src/source/: CustomHttpSessionFactory.cpp  HTTPRequestPool.cpp  HTTPRequestPoolRunnable.cpp  HTTPRequestWrapper.cpp  PocoCurlApp.cpp
src/source/Utils/: Logger.cpp  Thread.cpp  URLParser.cpp
test/: CMakeLists.txt  main.test.cpp  test-file.hpp
test/source/: HTTPRequestWrapper.test.cpp  PocoCurlApp.test.cpp
